<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>overworld</name>
  <version>0.2.0</version>
  <description>The overworld package</description>

  <maintainer email="gsarthou@laas.fr">Guillaume Sarthou</maintainer>

  <license>LGPLv2</license>
  
  <author email="gsarthou@laas.fr">Guillaume Sarthou</author>


  <!-- ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <depend condition="$ROS_VERSION == 1">message_generation</depend>
  <depend condition="$ROS_VERSION == 1">diagnostic_msgs</depend>
  <depend condition="$ROS_VERSION == 1">rospy</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">tinyxml</depend>
  <depend condition="$ROS_VERSION == 1">cv_bridge</depend>
  <depend condition="$ROS_VERSION == 1">cmake_modules</depend>
  <depend condition="$ROS_VERSION == 1">pluginlib</depend>
  <depend condition="$ROS_VERSION == 1">rostest</depend>
  <depend condition="$ROS_VERSION == 1">ontologenius</depend>
  <depend condition="$ROS_VERSION == 1">tf2</depend>
  <depend condition="$ROS_VERSION == 1">tf2_ros</depend>
  <depend condition="$ROS_VERSION == 1">tf2_geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 1">tf2_eigen</depend>
  <depend condition="$ROS_VERSION == 1">roslib</depend>
  <depend condition="$ROS_VERSION == 1">eigen</depend>
  <depend condition="$ROS_VERSION == 1">message_filters</depend>
  <depend condition="$ROS_VERSION == 1">sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 1">visualization_msgs</depend>
  <depend condition="$ROS_VERSION == 1">geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 1">optitrack_msgs</depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <!-- ROS2 -->
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>
  <depend condition="$ROS_VERSION == 2">std_msgs</depend>
  <depend condition="$ROS_VERSION == 2">geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 2">message_filters</depend>
  <depend condition="$ROS_VERSION == 2">ontologenius</depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ros2launch</exec_depend>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>


  <export>
    <overworld condition="$ROS_VERSION == 1" plugin="${prefix}/modules_plugins.xml" />
    <ontologenius condition="$ROS_VERSION == 1" plugin="${prefix}/reasoners_plugins.xml" />

    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
